tests/suite/snapshots/suite__case_6bfj.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Anchor
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: AnchorName
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 8
- token: Break
  start:
    line: 1
    column: 8
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Anchor
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: AnchorName
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 4
- token: Separator
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 5
- token: SequenceStart
  start:
    line: 2
    column: 5
  end:
    line: 2
    column: 6
- token: Separator
  start:
    line: 2
    column: 6
  end:
    line: 2
    column: 7
- token: Anchor
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: AnchorName
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 12
- token: Separator
  start:
    line: 2
    column: 12
  end:
    line: 2
    column: 13
- token: Scalar
  start:
    line: 2
    column: 13
  end:
    line: 2
    column: 14
- token: CollectionEntry
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 15
- token: Separator
  start:
    line: 2
    column: 15
  end:
    line: 2
    column: 16
- token: Scalar
  start:
    line: 2
    column: 16
  end:
    line: 2
    column: 17
- token: CollectionEntry
  start:
    line: 2
    column: 17
  end:
    line: 2
    column: 18
- token: Separator
  start:
    line: 2
    column: 18
  end:
    line: 2
    column: 19
- token: Scalar
  start:
    line: 2
    column: 19
  end:
    line: 2
    column: 20
- token: Separator
  start:
    line: 2
    column: 20
  end:
    line: 2
    column: 21
- token: SequenceEnd
  start:
    line: 2
    column: 21
  end:
    line: 2
    column: 22
- token: MappingValue
  start:
    line: 2
    column: 22
  end:
    line: 2
    column: 23
- token: Separator
  start:
    line: 2
    column: 23
  end:
    line: 2
    column: 24
- token: Scalar
  start:
    line: 2
    column: 24
  end:
    line: 2
    column: 29
- token: Break
  start:
    line: 2
    column: 29
  end:
    line: 3
    column: 0

