tests/suite/snapshots/suite__case_6ca3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Separator
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: SequenceStart
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Break
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 4
    line: 1
    column: 0
- token: Indent
  start:
    index: 4
    line: 1
    column: 0
  end:
    index: 4
    line: 1
    column: 0
- token: Separator
  start:
    index: 4
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 1
- token: SequenceEnd
  start:
    index: 5
    line: 1
    column: 1
  end:
    index: 6
    line: 1
    column: 2
- token: Break
  start:
    index: 6
    line: 1
    column: 2
  end:
    index: 8
    line: 2
    column: 0

