tests/suite/snapshots/suite__case_6h3v.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: SingleQuote
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: SingleQuoted
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 10
    line: 0
    column: 10
- token: SingleQuote
  start:
    index: 10
    line: 0
    column: 10
  end:
    index: 11
    line: 0
    column: 11
- token: MappingValue
  start:
    index: 11
    line: 0
    column: 11
  end:
    index: 12
    line: 0
    column: 12
- token: Separator
  start:
    index: 12
    line: 0
    column: 12
  end:
    index: 13
    line: 0
    column: 13
- token: Scalar
  start:
    index: 13
    line: 0
    column: 13
  end:
    index: 17
    line: 0
    column: 17
- token: Break
  start:
    index: 17
    line: 0
    column: 17
  end:
    index: 19
    line: 1
    column: 0

